# teacher

./: .gitignore  .readthedocs.yaml  CITATION.bib  LICENSE  MANIFEST.in  README.md  codecov.yml  jfml_export.ipynb  pyproject.toml  setup.cfg  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  doc_improvement.yml  feature_request.yml
.github/workflows/: integration.yml  linting.yml  main.yml  python-publish.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: datasets_api.rst  explanation_api.rst  fuzzy_api.rst  index.rst  metrics_api.rst  neighbors_api.rst  tree_api.rst
docs/source/devel/: contributing.rst  dependencies.rst  development_setup.rst  documenting_teacher.rst  index.rst  testing.rst
docs/source/tutorials/: index.rst
docs/source/users/: index.rst
docs/source/users/faq/: index.rst  troubleshooting_faq.rst
docs/source/users/getting_started/: index.rst
docs/source/users/installing/: index.rst
docs/source/users/project/: citing.rst  index.rst  license.rst
docs/sphinxext/: github_link.py  redirect_from.py
flore/: __init__.py
flore/datasets/: __init__.py  _base.py  prepare_dataset.py
flore/datasets/data/: pima-indians-diabetes.csv
flore/datasets/tests/: test_base.py
flore/explanation/: FDT_explainer.py  FID3_explainer.py  __init__.py  _base_explainer.py  _counterfactual.py  _factual.py  _factual_local_explainer.py  _utils.py  base_explainer.py  factual.py  lore_fuzzy.py  lore_fuzzy_v2.py
flore/explanation/tests/: test_base.py  test_counterfactual.py  test_explainer.py  test_factual.py  test_lore_fuzzy.py
flore/fuzzy/: __init__.py  _base.py  fuzzy_set.py  fuzzy_variable.py
flore/fuzzy/tests/: test_base.py  test_fuzzy_set.py
flore/metrics/: __init__.py  rule.py
flore/metrics/tests/: test_rule.py
flore/neighbors/: __init__.py  _base_neighborhood.py  _fuzzy_neighborhood.py  _lore_neighborhood.py  _simple_neighborhood.py  genetic_algorithm.py  gpdatagenerator.py  neighbor_generator.py  neighborhood.py
flore/neighbors/tests/: test_genetic_algorithm.py  test_neigborhoods.py
flore/tree/: __init__.py  base_decision_tree.py  fdt_dev_tree.py  fdt_tree.py  id3_dev_tree.py  id3_tree.py  rule.py
flore/tree/tests/: fdt_legacy_tree.py  id3_legacy_tree.py  test_dev_trees.py  test_fdt_tree.py  test_id3_tree.py  test_rule.py
flore/utils/: __init__.py  util.py
src/teacher/: __init__.py
src/teacher/datasets/: __init__.py  _base.py
src/teacher/datasets/data/: FLAVIA3.csv  basket.csv  small_basket.csv
src/teacher/datasets/tests/: test_base.py
src/teacher/explanation/: FBDT_explainer.py  FDT_explainer.py  __init__.py  _base_explainer.py  _counterfactual.py  _factual.py  _factual_local_explainer.py
src/teacher/explanation/tests/: test_explainer.py
src/teacher/fuzzy/: __init__.py  _base.py  _discretize.py  fuzzy_set.py
src/teacher/metrics/: __init__.py  _counterfactual.py
src/teacher/metrics/tests/: test_rule.py
src/teacher/neighbors/: __init__.py  _exceptions.py  _fuzzy_neighborhood.py  _lore_neighborhood.py  _sampling_neighborhood.py  gpdatagenerator.py
src/teacher/neighbors/tests/: test_genetic_algorithm.py  test_neigborhoods.py
src/teacher/tree/: __init__.py  base_decision_tree.py  fdt_binary_tree.py  fdt_tree.py  id3_tree.py  rule.py
src/teacher/tree/tests/: fdt_legacy_tree.py  test_fdt_tree.py
teacher/: __init__.py
teacher/datasets/: __init__.py  _base.py
teacher/datasets/data/: beer.csv
teacher/explanation/: FBDT_explainer.py  FDT_explainer.py  FID3_explainer.py  __init__.py  _base_explainer.py  _counterfactual.py  _factual.py  _factual_local_explainer.py
teacher/explanation/tests/: conftest.py  test_counterfactual.py  test_explainer.py  test_factual.py
teacher/fuzzy/: __init__.py  _base.py  _discretize.py  fuzzy_set.py  fuzzy_variable.py
teacher/fuzzy/tests/: test_base.py  test_fuzzy_set.py
teacher/metrics/: __init__.py  _counterfactual.py  _rule.py  rule.py
teacher/neighbors/: __init__.py  _base_neighborhood.py  _fuzzy_neighborhood.py  _lore_neighborhood.py  _sampling_neighborhood.py  _simple_neighborhood.py  neighbor_generator.py
teacher/neighbors/tests/: test_neigborhoods.py
teacher/tree/: __init__.py  _voting.py  base_decision_tree.py  fdt_binary_tree.py  fdt_tree.py  id3_tree.py  rule.py
teacher/tree/tests/: fdt_legacy_tree.py  test_dev_trees.py  test_fdt_tree.py  test_rule.py
