[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teacher-xai"
requires-python = ">=3.9"
description = "Package for Machine Learning explanation in Python."
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
    "numpy>=1.19.3",
    "pandas",
    "scikit-learn",
    "deap",
    "imblearn",
    "matplotlib",
]
authors = [
    {name = "Guillermo Tom치s Fern치ndez Martin", email = "Guillermo.Fernandez@uclm.es"}
]
maintainers = [
    {name = "Guillermo Tom치s Fern치ndez Martin", email = "Guillermo.Fernandez@uclm.es"}
]

[project.urls]
Homepage = "https://xai-teacher.readthedocs.io/en/latest/"
Documentation = "https://xai-teacher.readthedocs.io/en/latest/"
Repository = "https://github.com/Kaysera/teacher"

[tool.pytest.ini_options]
# addopts = ["--disable-pytest-warnings -rxXs"]
addopts = ["-rxXs"]

[tool.coverage.run]
omit=[
    "./src/teacher/neighbors/neighbor_generator.py",
    "./src/teacher/neighbors/gpdatagenerator.py",
    "./src/teacher/utils/*",
    "./src/teacher/tree/id3_tree.py",
    "./src/teacher/tree/tests/fdt_legacy_tree.py",
    "./src/teacher/tree/tests/id3_legacy_tree.py",
]
dynamic_context = "test_function"

[tool.setuptools.dynamic]
version = {attr = "teacher.__version__"}