[options]

install_requires = 
    numpy==1.19.3
    pandas
    scikit-learn
    deap
    imblearn
    scikit-fuzzy
    matplotlib

[flake8]
max-line-length=120
exclude = 
    .git,
    __pycache__,
    data,
    utils,
    neighbors,
    id3_tree.py
ignore=E722

[tool:pytest]
addopts =
    # TODO: Remove and activate the "disable-pytest-warnings" and
    # "doctest-modules" flags when the modules have been reviewed
    --disable-pytest-warnings
    # --doctest-modules
    -rxXs

[coverage:run]
omit=
    ./flore/neighbors/neighbor_generator.py
    ./flore/neighbors/gpdatagenerator.py
    ./flore/utils/*
    ./flore/tree/id3_tree.py
dynamic_context = test_function
