[metadata]
name = teacher-xai
version = attr: teacher.__version__
author = Guillermo Tom치s Fern치ndez Martin
author_email = Guillermo.Fernandez@uclm.es
maintainer = Guillermo Tom치s Fern치ndez Martin
maintainer_email = Guillermo.Fernandez@uclm.es
license = MIT
license_file = LICENSE
description = Package for Machine Learning explanation in Python.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires = 
    numpy>=1.19.3
    pandas
    scikit-learn
    deap
    imblearn
    scikit-fuzzy
    matplotlib

packages=
    teacher

[flake8]
max-line-length=120
exclude = 
    .git,
    __pycache__,
    data,
    teacher/utils/*,
    neighbor_generator.py,
    gpdatagenerator.py,
    docs/*

[tool:pytest]
addopts =
    # TODO: Remove and activate the "disable-pytest-warnings" and
    # "doctest-modules" flags when the modules have been reviewed
    --disable-pytest-warnings
    # --doctest-modules
    -rxXs

[coverage:run]
omit=
    ./teacher/neighbors/neighbor_generator.py
    ./teacher/neighbors/gpdatagenerator.py
    ./teacher/utils/*
    ./teacher/tree/id3_tree.py
    ./teacher/tree/tests/fdt_legacy_tree.py
    ./teacher/tree/tests/id3_legacy_tree.py
dynamic_context = test_function
